--- a/formsproject/templates/html.html
+++ b/formsproject/templates/html.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'static/css.css' %}">
+    <link rel="stylesheet" href="{% static 'static/forms.css' %}">
 
 </head>
 <body>
